--- a/stylesheetsv3/signin.css
+++ b/stylesheetsv3/signin.css
@@ -83,10 +83,6 @@
     width: 212px;
     padding: 0 0 0 20px;
 }
-#login-layer .msg-error {
-    margin: 0 0 17px 0;
-}
-
 /* Sign Up */
 #signup-layer {
     width: 100%;
@@ -210,7 +206,7 @@
 }
 #signup-layer .textfield, #forgot-password-layer .textfield, #reset-password-layer .textfield {
     width: 84.5%;
-    padding: 2px 0 0 30px;
+    padding: 0 0 0 25px;
 }
 
 /* Forgot Password Layer */
@@ -222,7 +218,7 @@
     background: url(../images/bg_b70.png);
     overflow: hidden;
     font-size: 13px;
-    z-index: 99;
+    z-index: 60;
     display: none;
     top: 0;
 }
@@ -331,25 +327,17 @@
 }
 
 /* Reset Password Layer */
-#reset-password-cancel.btn-white .center {
-    width: 75px;
-}
-#reset-password-cancel.btn-white {
-    margin: 0 25px 0 0;
-}
-#btn-new-password.btn-white .center {
-    width: 130px;
+#reset-password-layer .btn-white .center {
+    width: 113px;
 }
 #reset-password-layer .msg-btn-holder {
     bottom: 15px;
-	left: 44px;
-	position: absolute;
 }
 #reset-password-form {
     line-height: 8px;
 }
 #reset-password-form .msg-error {
-    margin: -5px 0 0 7px;
+    margin: -5px 0 0 0;
 }
 
 /* Btn FB */
