--- a/stylesheetsv3/epcurate-publish.css
+++ b/stylesheetsv3/epcurate-publish.css
@@ -829,6 +829,7 @@
 
 #content-wrap form .form-btn .btn-wrap {
     height: 46px;
+    margin-top: 2px;
     background: url(../images/bg_main.png) repeat -2% 0;
 }
 
@@ -836,7 +837,7 @@
     position: relative;
     width: 157px;
     height: 27px;
-    padding: 8px 0 0;
+    padding: 10px 0 0;
     margin: 0 auto;
 }
 
