版本: 5336 作者: mars 日期: 2013/8/15 18:15 訊息: https://docs.google.com/spreadsheet/ccc?key=0AjDDP--2Cg6AdHJKYkRkUW56cVBYS25kZ1l4Q0RFdWc#gid=2 1.Episdoe curation / Edit episode    a.Landing in 在第一順位的有效影片上    b.左邊YouTube player 不自動播放    c.右邊的區域顯示"Add video", "Edit", "POI & interactive event" 三個tab，畫面Landing in "Edit" tab    d.Storyboard highlight editing video    e.若episode內皆為失效影片，則Landing in "Add video" tab，不highlight任何影片 2.Episdoe curation / Video reorder and choose    a.mouse over video title 則會變成方向遊標，拖拉video，可以編排video的位置 ---- 異動 : /epcurate-curation.html 異動 : /javascripts/v3/func.curation.js 異動 : /stylesheetsv3/ep-curation.css 異動 : /images/icon_play.png
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5336 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/ep-curation.css
+++ b/stylesheetsv3/ep-curation.css
@@ -2857,8 +2857,8 @@ p.auto-height {
 #storyboard .storyboard-list ul li .hover-func a.video-play {
     display: block;
     position: absolute;
-    top: 10px;
-    left: 27px;
+    padding-left: 54px;
+    padding-top: 20px;
     width: 24px;
     height: 25px;
     background: url(../images/icon_play.png) no-repeat 0 0;
