版本: 5357 作者: mars 日期: 2013/8/19 11:30 訊息: 1. css 調整 ---- 異動 : /stylesheetsv3/ep-curation.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5357 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/ep-curation.css
+++ b/stylesheetsv3/ep-curation.css
@@ -2645,6 +2645,7 @@ p.auto-height {
 #storyboard .storyboard-list ul li p.img img {
     display: block;
     margin: 7px 0 0 7px;
+	cursor: pointer;
 }
 
 #storyboard .storyboard-list ul li:hover p.img img {
@@ -2837,7 +2838,7 @@ p.auto-height {
     z-index: 52;
     width: 74px;
     height: 45px;
-    cursor: move;
+    cursor: pointer;
 }
 
 #storyboard .storyboard-list ul li .hover-func a.video-del {
