--- a/stylesheetsv3/channel.css
+++ b/stylesheetsv3/channel.css
@@ -1,6 +1,15 @@
 /* Channel list common */
+#content-main-wrap {
+	top: 65px;	
+}
+
+div.constrain {
+	padding: 10px 0px 63px;	
+}
+
 #title-func {
     z-index: 61;
+	padding: 26px 0 0 0;
 }
 
 #title-func h2 {
@@ -12,7 +21,7 @@
 	height: 27px;
 	line-height: 27px;
 	left: 0px;
-	right: 100px;
+	right: 280px;
 }
 
 #channel-name {
@@ -42,10 +51,6 @@ body.mac #title-func h2 {
 
 #channel-name {
     display: block;
-}
-
-#title-func .btns {
-    width: 162px;
 }
 
 /* Channel list */
@@ -90,14 +95,18 @@ body.mac #title-func h2 {
 }
 
 #channel-list li .wrap {
-    float: left;
+	position: absolute;
+	left: 0;
+	right: 31px;
+	top: 0;
+	bottom: 0;
 }
 
 #channel-list li p.drag {
     position: absolute;
     top: 2px;
     right: 2px;
-    width: 34px;
+    width: 29px;
     height: 126px;
     text-indent: -100000px;
 }
@@ -142,7 +151,7 @@ body.mac #title-func h2 {
     overflow: hidden;
     width: 192px;
     height: 108px;
-    margin: 7px 15px 0 8px;
+    margin: 10px 15px 0 10px;
 }
 
 #channel-list li .photo-list .ep {
@@ -243,9 +252,11 @@ body.mac #title-func h2 {
 
 /* Channel list info */
 #channel-list li .info {
-    float: left;
-    overflow: hidden;
-    height: 126px;
+	overflow: hidden;
+	height: 126px;
+	position: absolute;
+	left: 215px;
+	right: 230px;
 }
 
 #channel-list li .info h3 {
@@ -287,7 +298,7 @@ body.mac #title-func h2 {
     float: right;
     position: relative;
     width: 216px;
-    height: 116px;
+    height: 124px;
     margin: 5px 0 0 0;
 }
 
@@ -429,7 +440,7 @@ body.mac #title-func h2 {
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip {
     display: none;
     position: absolute;
-    top: -30px;
+    top: -29px;
     left: -20px;
     height: 32px;
     color: #555;
@@ -1281,7 +1292,7 @@ body.mac #title-func h2 {
 /* Get URL */
 #channel-list .get-url {
     position: absolute;
-    top: -16px;
+    top: -11px;
     left: 0;
     display: none;
     z-index: 99;
@@ -1297,4 +1308,5 @@ body.mac #title-func h2 {
     background: url(../images/bg_tip_bottom.png) no-repeat center bottom;
     bottom: 3px;
     right: 12px;
+	display: block;
 }
