--- a/stylesheetsv3/episode.css
+++ b/stylesheetsv3/episode.css
@@ -1,11 +1,6 @@
 /* Episode */
-#content-main-wrap {
-	top: 46px;
-	/*padding: 50px 0 0 0;*/
-}
-
 div.constrain {
-	padding: 50px 0 60px 0;	
+	padding: 30px 0 63px 0;	
 }
 
 #title-func {
@@ -37,32 +32,6 @@ div.constrain {
 
 #title-func h2 .title-crumb {
     float: left;
-}
-
-#title-func ul {
-    float: right;
-    overflow: hidden;
-}
-
-#title-func ul li {
-    float: left;
-    margin-right: 10px;
-}
-
-#title-func ul li.last {
-    margin: 0;
-}
-
-#title-func ul li p {
-    width: 162px;
-}
-
-#title-func ul li p span a {
-    padding: 4px 5px 0 !important;
-}
-
-body.mac #title-func ul li p span a {
-    font-weight: 300;
 }
 
 /* ep time list */
@@ -1123,16 +1092,23 @@ body.mac #title-func ul li p span a {
 /* Get URL */
 #ep-list .get-url {
     position: absolute;
-    top: -50px;
-    left: 313px;
+    top: -19px;
+    left: 410px;
     display: none;
-    z-index: 99;
+    z-index: 5;
     font-size: 13px;
     text-align: left;
 }
 
 #ep-list.favorite .get-url {
     left: 263px;
+}
+
+.episode-list .get-url .tip-arrow-left {
+    position: absolute;
+    bottom: 20px;
+    left: -7px;
+	display: block;
 }
 
 .episode-list .get-url .tip-bottom {
