版本: 5376 作者: mars 日期: 2013/8/22 10:34 訊息: 1. channel-poi.html move to v3 2. episode scrollerbar fix ---- 異動 : /channnel-poi.html 異動 : /javascripts/v3/func.channel-poi.js 異動 : /javascripts/v3/func.episode.js 異動 : /javascripts/v3/domready.episode.js 異動 : /stylesheetsv3/style.css 異動 : /stylesheetsv3/channnel-poi.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5376 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/style.css
+++ b/stylesheetsv3/style.css
@@ -1904,7 +1904,11 @@ body.mac #title-func ul li p span a {
 }
 
 #epcurate-curation #cur-poi .poi-list ul li .icon.instant, #poi-list .poi-info ul li ol li .icon.instant {
-	background-position: 0 -144px;
+    background-position: 0 -144px;
+}
+
+#epcurate-curation #cur-poi .poi-list ul li .icon.null-icon, #poi-list .poi-info ul li ol li .icon.null-icon {
+    background-position: 0 -10000px;
 }
 
 #epcurate-curation #cur-poi .poi-list ul li .icon.error, #poi-list .poi-info ul li ol li .icon.error {
