--- a/stylesheetsv3/channel-poi.css
+++ b/stylesheetsv3/channel-poi.css
@@ -1,6 +1,5 @@
 /* Channel POI */
 #content-main-wrap {
-    margin-top: 69px !important;
 }
 
 #content-main #title-func h2 {
@@ -12,23 +11,33 @@
 #content-main.poi-create #title-func h2.poi-create {
     display: block !important;
     visibility: visible;
+	position: absolute;
+	height: 27px;
+	line-height: 27px;
+	left: 0px;
+	right: 100px;
 }
 
 #title-func h2 em {
     overflow:hidden;
     float: left;
-    height: 21px;
-    line-height: 21px;
     font-style: normal;
     white-space: nowrap;
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     -ms-text-overflow: ellipsis;
     -moz-binding: url('ellipsis.xml#ellipsis');
+	max-width: 53%;
+	float: left;
+	margin-right: 5px;
 }
 
 #title-func h2 span {
     float: left;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	-moz-binding: url("ellipsis.xml#ellipsis");
 }
 
 /* poi list */
@@ -153,53 +162,19 @@
     font-size: 13px;
 }
 
-#poi-list .poi-info ul li ol li {
-    overflow: hidden;
-    background: url(../images/bg_divider.png) repeat-x bottom;
+#poi-list .poi-info ul li ol li .icon span a {
+    position: absolute;
+    left: 35px;
+	right: 37px;
 }
 
-#poi-list .poi-info p.poi-title {
-    float: left;
-    width: 480px;
-    height: 33px;
-    line-height: 33px;
-    margin: 0;
-    color: #555;
-    font-size: 13px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    -ms-text-overflow: ellipsis;
-    -moz-binding: url('ellipsis.xml#ellipsis');
+#poi-list .poi-info ul li ol li .icon:hover .tip-white {
+	top: -27px;
+	left: -25px;
 }
 
-#poi-list .poi-info p.func {
-    float: right;
-    width: auto;
-    padding: 0;
-}
-
-#poi-list .poi-info p.func .edit,
-#poi-list .poi-info p.func .btn-del {
-    float: left;
-    width: 22px;
-    height: 25px;
-    margin: 3px 7px 0 0;
-    background: url(../images/btns.png) no-repeat 0 -1060px;
-    text-indent: -100000px;
-}
-
-#poi-list .poi-info p.func .btn-del {
-    background-position: 0 -856px;
-}
-
-#poi-list .poi-info p.func .edit:hover {
-    background-position: -23px -1060px;
-}
-
-#poi-list .poi-info p.func .btn-del:hover {
-    background-position: -23px -856px;
+#poi-list .poi-info ul li ol li .icon:hover .tip-bottom {
+	margin: -5px 0px 0px -25px;
 }
 
 /* poi edit */
@@ -247,6 +222,7 @@
 
 #channel-poi .edit-block .fminput .fmfield p.text {
     float: left;
+	width: 62.1%;
     height: 30px;
     margin-right: 10px;
     padding-left: 3px;
@@ -259,7 +235,7 @@
 }
 
 #channel-poi .edit-block .fminput .fmfield p.text span .text {
-    width: 485px;
+    width: 99.6%;
     height: 30px;
     padding-left: 4px;
     border: none;
@@ -276,9 +252,6 @@
 }
 
 #channel-poi .edit-block .form-btn {
-    position: absolute;
-    bottom: 6px;
-    right: 0;
 }
 
 #channel-poi .edit-block .form-btn .form-btn-wrap {
