版本: 5389 作者: mars 日期: 2013/8/23 15:27 訊息: 1. channel poi input text area fix 2. episode curation's poi list locate problem 3. index performance tune ---- 異動 : /index.html 異動 : /epcurate-curation.html 異動 : /javascripts/v3/func.channel-poi.js 異動 : /stylesheetsv3/ep-curation.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5389 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheetsv3/ep-curation.css
+++ b/stylesheetsv3/ep-curation.css
@@ -1743,6 +1743,16 @@ p.auto-height {
     width: 550px;
 }
 
+#poi-list-page {
+    position: relative;
+}
+
+#poi-list-page li.pages {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
 #epcurate-curation #cur-poi .poi-list .poi-list-wrap {
     position: relative;
 }
