--- a/stylesheetsv3/portal.css
+++ b/stylesheetsv3/portal.css
@@ -189,7 +189,7 @@
     padding: 0;
 }
 #portal-set li.empty:hover {
-    box-shadow: 0px 0px 15px 3px rgb(255, 255, 255), 0px 0px 15px 1px rgb(255, 255, 255) inset;
+    box-shadow: 0px 0px 10px 2px rgb(255, 255, 255), 0px 0px 10px 1px rgb(255, 255, 255) inset;
     background: #fff;
 }
 #portal-layer li.empty h1 {
@@ -201,6 +201,7 @@
 #portal-set li.empty .thumb {
     display: none;
 }
+
 /* Navigation */
 #func-nav ul li .sub-nav li a {
     font-size: 13px;
@@ -227,8 +228,9 @@
     cursor: default;
 }
 .sub-nav {
-    margin: -10px 0 0 0;
+    margin: -15px 0 0 0;
 }
+
 /* Manage */
 #title-func h2 {
     float: left;
@@ -328,9 +330,8 @@
     overflow:auto;
 }
 #store-layer .channel-list {
-    padding: 20px 0 0 20px;
+    padding: 20px 0 48px 25px;
     left: -20px;
-    padding-bottom: 48px;
 }
 #portal-list .channel-list {
     padding: 20px 0 48px 20px;
@@ -341,7 +342,7 @@
     font-size: 13px;
     cursor: move;
     float: left;
-    width: 115px;
+    width: 112px;
     margin: 0 0 30px 0;
     z-index: 3;
     position: relative;
@@ -455,6 +456,8 @@
     margin: 0px auto;
 }
 /* Minus */
+.channel-list li.minus {
+}
 .channel-list li.minus .ch {
     opacity: 0.3;
     filter: alpha(opacity=30);
@@ -464,13 +467,10 @@
     color:#999;
 }
 .channel-list li.minus .thumb {
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#dbdbdb), to(#fbfbfb));
-    background: -webkit-linear-gradient(#dbdbdb, #fbfbfb);
-    background: -moz-linear-gradient(#dbdbdb, #fbfbfb);
-    background: -ms-linear-gradient(#dbdbdb, #fbfbfb);
-    background: -o-linear-gradient(#dbdbdb, #fbfbfb);
-    background: linear-gradient(#dbdbdb, #fbfbfb);
-    -pie-background: linear-gradient(#dbdbdb, #fbfbfb);
+	background: #d2d2d2;
+    filter: alpha(Opacity=90);
+    opacity: 0.9;
+	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
     box-shadow: 0px 0px 3px rgba(100, 100, 100, 0.5) inset;
 }
 .channel-list li.minus .thumb:hover .ch {
@@ -481,26 +481,27 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
     overflow: hidden;
 }
+
 /* Empty */
-#portal-layer .channel-list li.empty {
+.channel-list li.empty {
     cursor: pointer;
     height: 112px;
 }
-#portal-layer .channel-list li.empty p {
+.channel-list li.empty p {
     line-height: 17px;
     margin: -75px 0 0 15px;
     position: relative;
     z-index: 5;
 }
-#portal-layer .channel-list li.empty .thumb {
+.channel-list li.empty .thumb {
     width: 89px;
     height: 89px;
     border: 3px dashed #fff;
     background: none;
     box-shadow: none;
 }
-#portal-layer .channel-list li.empty:hover .thumb {
-    box-shadow: 0px 0px 15px 3px rgb(255, 255, 255), 0px 0px 15px 1px rgb(255, 255, 255) inset;
+.channel-list li.empty:hover .thumb  {
+    box-shadow: 0px 0px 10px 2px rgb(255, 255, 255), 0px 0px 10px 1px rgb(255, 255, 255) inset;
     background: #fff;
     width: 89px;
     height: 89px;
@@ -508,7 +509,7 @@
     left: 0;
     margin: 0 0 0 0;
 }
-#portal-layer .channel-list li.empty .thumb div, #portal-layer .channel-list li.empty:hover .watermark, #portal-layer .channel-list li.empty:hover .ch {
+.channel-list li.empty .thumb div, .channel-list li.empty:hover .watermark, .channel-list li.empty:hover .ch {
     display: none;
 }
 /* Disable */
@@ -600,6 +601,17 @@
     display: block;
     background-position: right -22px;
 }
+.btn-edit {
+    display: none;
+    background: url(../images/btn_func.png) 0 -149px no-repeat;
+    height: 22px;
+    z-index: 4;
+    cursor: pointer;
+}
+.btn-edit:hover {
+    display: block;
+    background-position: -23px -149px;
+}
 .channel-list .thumb:hover .watermark, #portal-layer .channel-list .thumb:hover .btn-remove, #portal-layer .channel-list .thumb:hover .btn-top, #store-layer .channel-list .thumb:hover .btn-minus {
     display: block;
 }
@@ -632,17 +644,25 @@
 }
 
 /* First */
-#portal-layer h2 {
+#portal-layer h2, #store-layer h2 {
     font-size: 30px;
     font-weight: bold;
     text-align: center;
-    margin: 0 auto 20px auto;
+    margin: 65px auto 20px auto;
     color: #b4b4b4;
     position: absolute;
-    top: 300px;
+    top: 50%;
     text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4), 0px 1px 0px rgba(255, 255, 255, 0.4);
-    width: 100%;
+    left: 10px;
+	right: 35px;
+	text-align:justify;
+	text-justify:inter-word;
+	text-align: center;
 }
+#store-layer h2 {
+    margin: -25px auto 20px auto;
+}
+
 /* Message Layer */
 .msg-layer {
     width: 100%;
@@ -700,7 +720,7 @@
     z-index: 199;
 }
 .btn-msg-close:hover {
-    background: url(../images/btn_popup_close_press.png);
+    background-position: 0 -24px;
 }
 .msg-btn-holder {
     height: 35px;
@@ -768,6 +788,8 @@
     margin: 0 auto 20px auto;
     color: #b4b4b4;
     text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.4), 0px 1px 0px rgba(255, 255, 255, 0.4);
+	height: 40px;
+	line-height: 40px;
 }
 #portal-add-layer .msg-holder {
     height: 501px;
@@ -817,13 +839,16 @@
 #portal-add-layer .input-gray .center {
     width: 545px;
 }
+ #portal-add-layer.store .input-gray .center {
+    width: 516px;
+}
 #portal-add-layer .input-gray .center .textfield {
-    left: 6px;
+    left: 1px;
     width: 98.5%;
 }
 #portal-add-layer form .btn-white {
     float: right;
-    margin: -30px 0 0 0;
+    margin: -31px 0 0 0;
 }
 #portal-add-layer form .input-gray {
     left: 8px;
@@ -842,7 +867,7 @@
     width: auto;
 }
 #store-layer .form-content {
-    padding: 0 10px 0 10px;
+    padding: 0 0 0 10px;
     width: auto;
     line-height: 28px;
     float: right;
@@ -934,7 +959,7 @@
 #store-layer {
     font-size: 13px;
     position: absolute;
-    top: 58px;
+    top: 96px;
     bottom: 0;
     right: 0;
     left: 0;
@@ -944,19 +969,23 @@
     overflow: hidden;
     width: 100%;
     position: absolute;
-    top: 158px;
+    top: 68px;
     bottom: 0;
+	right: 4px;
+	margin: 20px 0 0 0;
 }
-/*#store-layer.collapse #store-constrain {
-    top: 78px;
-}*/
+#store-layer.collapse #store-constrain {
+    margin: 0 0 0 0;
+}
 #store-list {
     width: 100%;
     position: absolute;
-    top: 0;
+    top: -5px;
     bottom: 0;
     overflow: hidden;
-    /*padding-bottom: 48px;*/
+}
+#store-layer.collapse #store-list {
+	top: 0;
 }
 
 #store-slider {
@@ -975,7 +1004,8 @@
 }
 #store-category ul {
     margin: 9px 0 0 10px;
-    display: block;
+	padding: 3px;
+    display: none;
     position: relative;
     text-align: left;
     background: #d2d2d2;
@@ -991,18 +1021,70 @@
 }
 #store-category ul li {
     float: left;
-    width: 18.3%;
-    line-height: 28px;
+    width: 19.4%;
+    line-height: 26px;
+	height: 26px;
     cursor: pointer;
-    padding: 0 4px 0 9px;
+	position: relative;
+	margin: 3px 0.3% 3px 0.3%;
 }
 #store-category ul li:hover {
-    color: #999;
+   	background: #9e9e9e; /* Old browsers */
+	background: -moz-linear-gradient(top,  #9e9e9e 0%, #b8b8b8 4%, #bababa 8%, #bababa 24%, #bfbfbf 44%, #cfcfcf 88%, #cfcfcf 96%, #cccccc 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#9e9e9e), color-stop(4%,#b8b8b8), color-stop(8%,#bababa), color-stop(24%,#bababa), color-stop(44%,#bfbfbf), color-stop(88%,#cfcfcf), color-stop(96%,#cfcfcf), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #9e9e9e 0%,#b8b8b8 4%,#bababa 8%,#bababa 24%,#bfbfbf 44%,#cfcfcf 88%,#cfcfcf 96%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #9e9e9e 0%,#b8b8b8 4%,#bababa 8%,#bababa 24%,#bfbfbf 44%,#cfcfcf 88%,#cfcfcf 96%,#cccccc 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #9e9e9e 0%,#b8b8b8 4%,#bababa 8%,#bababa 24%,#bfbfbf 44%,#cfcfcf 88%,#cfcfcf 96%,#cccccc 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #9e9e9e 0%,#b8b8b8 4%,#bababa 8%,#bababa 24%,#bfbfbf 44%,#cfcfcf 88%,#cfcfcf 96%,#cccccc 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e9e9e', endColorstr='#cccccc',GradientType=0 ); /* IE6-8 */
+    border-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.05) rgba(0, 0, 0, 0.9);
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5) inset, 0 1px 1px rgba(0, 0, 0, 0.05), 0 1px 1px rgba(255,255,255,0.9);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5) inset, 0 1px 1px rgba(0, 0, 0, 0.05), 0 1px 1px rgba(255,255,255,0.9);
+	cursor: move;
 }
-#store-category ul li.on {
+#store-category ul li span {
+	position: absolute;
+	right: 5px;
+	left: 5px;
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+}
+#store-category ul li span a {
+    color: #555;
+	text-decoration: none;
+}
+#store-category ul li:hover a, #store-category ul li:hover span, #store-category ul li span:hover {
+    color: #999;
+	font-weight: normal;
+    text-shadow: none;
+}
+#store-category ul li.on a, #store-category ul li a:hover, #store-category ul li.on span {
     color: #fff;
     font-weight: bold;
-    text-shadow: 0px 0px 10px #FFF;
+    text-shadow: 0px 0px 10px #fff;
+}
+#store-category ul li:hover .btn-minus, #store-category ul li:hover .btn-remove, #store-category ul li:hover .btn-edit {
+	position: relative;
+	float: right;
+	right: 3px;
+	top: 2px;
+	width: 22px;
+}
+#store-category ul li:hover .btn-edit {
+	right: 5px;
+}
+#store-category ul li.minus a {
+	color: #999;
+	font-weight: normal;
+	text-shadow: none;
+	cursor: default;
+}
+#store-category ul li.minus:hover {
+	background: none;
+	cursor: default;
 }
 #store-category .btn-gray.expand, #store-layer.collapse #store-category .btn-gray.collapse {
     display: none;
@@ -1020,11 +1102,18 @@
     line-height: 16px;
 }
 .btn-gray.expand .center .icon {
-    background: url(../images/icon_expand_collapse.png) no-repeat 0 0;
-    padding: 0 0px 0 26px;
+    background: url(../images/icon_expand_collapse.png) no-repeat 0 1px;
+    padding: 1px 0 0 26px;
     height: 16px;
     display: inline-block;
     line-height: 16px;
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    -moz-binding: url('ellipsis.xml#ellipsis');
+	max-width: 90%;
 }
 #store-category .btn-gray {
     z-index: 10;
@@ -1074,9 +1163,37 @@
     background-image: url(../images/btn_gray.png);
 }
 #store-layer.collapse .channel-list {
+	margin-top: 0;
 }
 #store-layer.collapse .load {
 }
+
+/* Empty */
+#store-category ul li.empty {
+	cursor: pointer;
+}
+#store-category ul li.empty a, #store-category ul li.empty a:hover {
+    cursor: pointer;
+    color: #555;
+	text-decoration: none;
+	font-weight: normal;
+}
+#store-category ul li.empty span {
+    border: 3px dashed #fff;
+    background: none;
+    box-shadow: none;
+	cursor: pointer;
+	line-height: 18px;
+	height: 18px;
+	left: 1px;
+	right: 1px;
+	padding: 0 0 0 3px;
+}
+#store-category ul li.empty:hover {
+    box-shadow: 0px 0px 10px 2px rgb(255, 255, 255), 0px 0px 10px 1px rgb(255, 255, 255) inset;
+    background: #fff;
+}
+
 /* Load More */
 .load {
     position: relative;
@@ -1200,7 +1317,85 @@
     padding: 17px 0 0 0;
 }
 
+/* Introduction */
+.intro {
+	margin: 0 30px 0 0;
+	font-size: 13px;	
+	height: 41px;
+	line-height: 41px;
+}
+.intro span {
+	float: left;
+	padding: 0 0 0 10px;	
+}
+.intro .msg-error {
+	float: left;
+	padding: 0 0 0 10px;
+	width: 100%;
+	line-height: 17px;	
+}
+a.switch-on,
+a.switch-off {
+    margin: 11px 5px 0 0;
+	float: right;
+	display: none;
+}
+a.switch-on {
+    text-indent: 6px;
+}
+a.switch-off {
+    text-indent: 33px;
+}
 
+/* Promotion Category */
+#store-layer .channel-list .thumb:hover .btn-minus, #store-category ul li:hover .btn-minus, #store-category ul li.empty:hover .btn-remove, #store-category ul li.empty:hover .btn-edit, .intro a, #store-category ul li {
+	display: none;
+}
+#store-layer .channel-list .thumb:hover .btn-remove, #store-category ul li:hover .btn-edit, #store-category ul li:hover .btn-remove, #store-layer .channel-list .thumb:hover .btn-top, .channel-list li.empty, #store-category ul li.empty {
+    display: block;
+}
+#store-category ul li:hover span {
+	right: 53px;
+}
+#store-category ul {
+	height: 64px;
+}
+#store-constrain {
+	margin: -38px 0 0 0;
+	display: none;
+}
+#store-category .info {
+	display: none;	
+}
+#store-layer h2 {
+	display: block;
+} 
+
+/* System Category */
+#content-wrap.system a.switch-on, #content-wrap.system .channel-list .thumb:hover .btn-minus, #content-wrap.system #store-category ul li:hover .btn-minus, #content-wrap.system .intro a, #content-wrap.system #store-category ul li, #content-wrap.system #store-category .info {
+	display: block;
+}
+#content-wrap.system .channel-list .thumb:hover .btn-remove,#content-wrap.system #store-category ul li:hover .btn-edit,#content-wrap.system #store-category ul li:hover .btn-remove, #content-wrap.system .channel-list .thumb:hover .btn-top, #content-wrap.system .channel-list li.empty, #content-wrap.system #store-category ul li.empty  {
+	display: none;
+}
+#content-wrap.system #store-category ul li:hover span {
+	right: 28px;
+}
+#content-wrap.system #store-category ul {
+	height: auto;	
+}
+#content-wrap.system #store-constrain {
+	margin: 26px 0 0 0;
+	display: block;
+}
+#content-wrap.system #store-layer.collapse #store-constrain {
+	margin: 0 0 0 0;
+	display: block;
+}
+#content-wrap.system #store-layer h2 {
+	display: none;
+}
+ 
 /* 1358 */
 @media only screen and (min-width: 1358px) {
     #portal-add-layer .msg-center {
@@ -1209,6 +1404,9 @@
     #portal-add-layer .input-gray .center {
         width: 892px;
     }
+	#portal-add-layer.store .input-gray .center {
+    	width: 863px;
+	}
     #portal-add-layer .list-holder {
         width: 1177px;
     }
@@ -1216,19 +1414,21 @@
         width: 1154px;
     }
     #store-category ul li {
-        width: 15.3%;
+        width: 16.06%;
     }
     #store-slider {
         top: 220px;
     }
-    /*#store-layer .channel-list {
-    }
-    #store-layer .load {
-        margin: 0 auto;
-        right: 35px;
-        width: 200px;
-        padding-bottom: 10px;
-        position: relative;
-        top: -48px;
-    }*/
+	#content-wrap.system #store-constrain {
+		margin-top: -6px;
+	}
+	#store-layer.collapse #store-constrain {
+		margin: 0 0 0 0;
+	}
+	#store-list {
+		top: -5px;
+	}
+	#store-layer.collapse #store-list {
+		top: 0;
+	}
 }
