--- a/stylesheetsv3/style.css
+++ b/stylesheetsv3/style.css
@@ -1712,13 +1712,13 @@ body.mac #title-func ul li p span a {
     padding: 5px 0 0;
     text-align: center;
 }
-.btn-gray:hover .left {
+.btn-gray:hover .left, .btn-gray.disabled .left {
     background: url(../images/btn_gray.png) no-repeat 0 -96px;
 }
-.btn-gray:hover .right {
+.btn-gray:hover .right, .btn-gray.disabled .right {
     background: url(../images/btn_gray.png) no-repeat 0 -128px;
 }
-.btn-gray:hover .center {
+.btn-gray:hover .center, .btn-gray.disabled .center {
     color: #999;
     background: url(../images/btn_gray.png) repeat-x 0 -160px;
 }
@@ -1727,7 +1727,7 @@ body.mac #title-func ul li p span a {
     padding: 2px 24px 2px 24px;
     color: #555;
 }
-.center a:hover, .center a:hover, .center:hover a, .center:hover a {
+.center a:hover, .center a:hover, .center:hover a, .center:hover a, .btn-gray.disabled .center a {
     text-decoration: none;
     color: #999;
 }
