--- a/stylesheetsv3/style.css
+++ b/stylesheetsv3/style.css
@@ -1712,15 +1712,25 @@ body.mac #title-func ul li p span a {
     padding: 5px 0 0;
     text-align: center;
 }
-.btn-gray:hover .left, .btn-gray.disabled .left {
+.btn-gray:hover .left {
     background: url(../images/btn_gray.png) no-repeat 0 -96px;
 }
-.btn-gray:hover .right, .btn-gray.disabled .right {
+.btn-gray:hover .right {
     background: url(../images/btn_gray.png) no-repeat 0 -128px;
 }
-.btn-gray:hover .center, .btn-gray.disabled .center {
+.btn-gray:hover .center {
     color: #999;
     background: url(../images/btn_gray.png) repeat-x 0 -160px;
+}
+.btn-gray.disabled .left {
+    background: url(../images/btn_gray.png) no-repeat 0 -192px;
+}
+.btn-gray.disabled .right {
+    background: url(../images/btn_gray.png) no-repeat 0 -224px;
+}
+.btn-gray.disabled .center {
+    color: #999;
+    background: url(../images/btn_gray.png) repeat-x 0 -256px;
 }
 .btn-gray.disabled a {
     cursor: default !important;
