--- a/stylesheets/portal.css
+++ b/stylesheets/portal.css
@@ -314,6 +314,18 @@
     float: left;
     cursor: pointer;
 }
+span.sType.on {
+    font-weight: bold;
+    background-position: 0 -38px;
+}
+span.sType {
+    height: 17px;
+    line-height: 17px;
+    margin: 5px 0 0 8px;
+    background: url(../images/btn_radio.png) no-repeat;
+    cursor: pointer;
+    padding-left: 20px;
+}
 .sort-list li.on {
     font-weight: bold;
     background-position: 0 -38px;
